crates/cli/tests/snapshots/lib__check@cant_reassign_captured_variable.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/cant_reassign_captured_variable.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/cant_reassign_captured_variable.nemo
---
success: false
exit_code: 1
----- stdout -----
[25] Error: Can't reassign the captured variable 'local'. Maybe you want to box this variable in a struct?
   ╭─[ tests/check/cant_reassign_captured_variable.nemo:4:13 ]
   │
 4 │         set local = 20;
   │             ───┬──  
   │                ╰──── Can't reassign the captured variable 'local'. Maybe you want to box this variable in a struct?
───╯


----- stderr -----
Error: "Check failed with 1 errors"
